Udpates per bug I saw to back to top button on mobile

--- a/src/components/Layout.scss
+++ b/src/components/Layout.scss
@@ -12,6 +12,9 @@
     z-index: 10;
     right: 0;
     top: 80%;
+    @media screen and (max-width: 992px) {
+      top: 50%;
+    }
     &:hover {
       cursor: pointer;
     }
